Making action single user from Blender File -menu crashes blender #71673

Closed
opened 2019-11-19 14:15:13 +01:00 by Johnny Varila · 8 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.20

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f5449
Worked: (optional)

Short description of error
Crashes when making action single user from Blend File list

Exact steps for others to reproduce the error
Open blender, give an animation to the basic cube (i used rotation), go to the outliner and switch the mode to Blender File, try to make the action single user, blender crashes.

outliner.png

outliner2.png

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.20 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: `f6cb5f5449` Worked: (optional) **Short description of error** Crashes when making action single user from Blend File list **Exact steps for others to reproduce the error** Open blender, give an animation to the basic cube (i used rotation), go to the outliner and switch the mode to Blender File, try to make the action single user, blender crashes. ![outliner.png](https://archive.blender.org/developer/F8141986/outliner.png) ![outliner2.png](https://archive.blender.org/developer/F8141997/outliner2.png)
Author

Added subscriber: @Zoni

Added subscriber: @Zoni

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Dalai Felinto self-assigned this 2019-11-19 14:58:16 +01:00

Thanks for the report. Make Single User is from the outliner is not working at the moment. It wasn't in 2.79 either.

Thanks for the report. Make Single User is from the outliner is not working at the moment. It wasn't in 2.79 either.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

This has been open for so long blender/blender-addons#54558 (Make Single User on an action or world in Outliner with the view Blender File crash blender), will merge these reports...

This has been open for so long blender/blender-addons#54558 (Make Single User on an action or world in Outliner with the view Blender File crash blender), will merge these reports...
Member

Closed as duplicate of blender/blender-addons#54558

Closed as duplicate of blender/blender-addons#54558

This issue was referenced by 9ca2cbdcea

This issue was referenced by 9ca2cbdcea6a8e46a07348ae35cdecfb0637eb9f

Changed status from 'Duplicate' to: 'Resolved'

Changed status from 'Duplicate' to: 'Resolved'
Thomas Dinges added this to the 2.82 milestone 2023-02-08 16:41:38 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71673
No description provided.